--- a/css/styles.css
+++ b/css/styles.css
@@ -166,8 +166,67 @@ li{
 }
   
 /* <-- Section hebergement --> */
+#hebergements {
+  display: flex;
+  justify-content: flex-start;
+  justify-items: center;
+  margin-top: 10px ;
+}
 
+#hebergements a {
+  text-decoration: none;
+  color: black;
+}
 
+.heb-container {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  width: 60%;
+  margin-right: auto;
+  border-radius: 20px;
+  background-color: #f2f2f2;
+  justify-content: center;
+}
+
+.heb-div{
+  width: 30%;
+  background-color: white;
+  border-radius: 20px;
+  margin: auto;
+  margin-bottom: 15px;
+  border: 3px solid white;  
+} 
+
+.heb-div:nth-child(1) {
+  width: 100%;
+  background-color: #f2f2f2;
+  padding-left: 20px;
+  border: none;
+}
+
+.heb-div img {
+  border-radius: 20px 20px 0 0;
+  justify-content: center;
+  width: 100%;
+  height: 100px;
+  object-fit: cover;
+  object-position: center;
+}
+
+.heb-description {
+  padding-left: 10px;
+  padding-bottom: 10px;
+}
+
+.heb-description p {
+  font-size: 12px;
+}
+
+.heb-description h2 {
+  font-size: 16px;
+  font-weight: bold;
+}
 /* <-- Section activités --> */
 
 
