--- a/css/styles.css
+++ b/css/styles.css
@@ -80,6 +80,7 @@ li{
   padding: 20px 0 20px 0 ;
   border: none; 
   margin-top: 8px;
+  color: #e7e2e2;
 }
 
 .search-form__icon {
@@ -160,12 +161,13 @@ li{
 
 .sub-info p {
   margin-left: 30px;
-  color:#f2f2f2;
+  color:#e7e2e2;
   font-size: 16px;
   font-weight:bold;
 }
   
-/* <-- Section hebergement article --> */
+/* <-- Section hebergement --> */
+
 #hebergements {
   display: flex;
   justify-content: flex-start;
@@ -186,14 +188,27 @@ li{
   margin-right: auto;
   border-radius: 20px;
   background-color: #f2f2f2;
-  justify-content: center;
+  justify-content: space-between;
 }
 
-.heb-tite {
+.heb-title {
+  font-weight: bold;
+  font-size: 20px ;
+  margin-top: 20px;
+}
+
+.heb-link {
+  font-weight: bold;
+  font-size: 20px ;
+  margin-top: 15px;
+   width: 100%;
+  background-color: #f2f2f2;
+  padding-left: 20px;
+  border: none;
 
 }
 
-.heb-div{
+.heb-div {
   width: 30%;
   background-color: white;
   border-radius: 20px;
@@ -202,7 +217,8 @@ li{
   border: 3px solid white;  
 } 
 
-.heb-div:nth-child(1) {
+.heb-div:nth-child(1),
+.heb-div:nth-child(8) {
   width: 100%;
   background-color: #f2f2f2;
   padding-left: 20px;
@@ -213,7 +229,7 @@ li{
   border-radius: 20px 20px 0 0;
   justify-content: center;
   width: 100%;
-  height: 100px;
+  height: 150px;
   object-fit: cover;
   object-position: center;
 }
@@ -225,12 +241,24 @@ li{
 
 .heb-description p {
   font-size: 12px;
+  margin-top: 8px;
+  margin-bottom: 6px;
 }
 
 .heb-description h2 {
   font-size: 16px;
   font-weight: bold;
 }
+
+.star {
+  color: #0065fc;
+}
+
+.no-star {
+  color: #f2f2f2;
+}
+
+/* <-- Section hebergement populaire --> */
 
 .pop-container {
   display: flex;
@@ -240,6 +268,7 @@ li{
   border-radius: 20px;
   background-color: #f2f2f2;
   justify-content: center;
+  margin-right: 50px;
 }
 
 .pop-div {
@@ -257,19 +286,31 @@ li{
   margin-top: 0;
 }
 
+.pop-title {
+  font-weight: bold;
+  font-size: 20px ;
+  margin-top: 20px;
+}
+
+.pop-title i{
+  display: flex;
+  justify-content: flex-end;
+  margin-top: -30px;
+}
+
 .pop-img img {
-  border-radius:20px 0 0 20px ;
+  border-radius: 20px 0 0 20px ;
   justify-content: flex-start;
   width: 40%;
-  height: 100px;
+  height: 150px;
   object-fit: cover;
   object-position: center;
   float: left;
+  margin-right: 10px;
 }
 
 .pop-description {
-  padding-left: 10px;
-  padding-bottom: 10px;
+padding-top: 20px;
 }
 
 .pop-description p {
@@ -282,14 +323,6 @@ li{
   font-size: 16px;
   font-weight: bold;
 } 
-
-.star {
-  color: #0065fc;
-}
-
-.no-star {
-  color: #f2f2f2;
-}
 
 /* <-- Section hebergement populaire aside --> */
 
