--- a/css/hebergement.css
+++ b/css/hebergement.css
@@ -34,7 +34,7 @@
   font-weight: bold;
   font-size: 20px ;
   margin-top: 15px;
-   width: 100%;
+  width: 200px;
   background-color: #f2f2f2;
   padding-left: 20px;
   border: none;
