--- a/css/header.css
+++ b/css/header.css
@@ -41,69 +41,12 @@ li {
   border-top: 4px solid #0065FC;
 }
 
-/* <-- Responsive header mediascreen 576px --> */
-@media screen and (max-width: 576px) {
-  
-  /* <-- Resultat ok mais peut mieux faire --> */
-
-  .nav-logo {
-    margin-left: 110px;
-    width: 90px;
-    height: 45px;
-  }
-
-  .nav ul {
-    margin-left: -350px;
-    margin-top: 90px;
-  } 
-
-/* <---------------------------------------> */
-  
-  .nav li:hover {
-    border-bottom: 2px solid #0065FC;
-    border-top:none ;
-  }
-
-  .title {
-    font-size: 26px;
-    margin-left: 10px;
-  }
-  
-  .sub-title {
-    margin-left: 10px;
-    color: black !important;
-    font-weight:normal !important;
-  }
-    
-  
-  #search-text {
-    border: 1px solid transparent;
-    border-radius: 10px 10px 10px 10px;
-    height: 50px;
-    width: 50px;
-    background-color: #0065FC;
-    margin-left: -8px;   
-  }
-
-  .search-form__input {
-    height:50px;
-    width: 250px !important;
-  }  
-  
-  .search-form__icon { 
-    margin-left: 9px;
-    height: 50px !important;
-    width: 50px !important;
-  }
-}
-
-
-
 /* <-- section Seach form --> */
 
 .sub-title {
   font-weight: bold;
   color: #e7e2e2;
+  margin-bottom: 20px;
 }
 
 /* <--  DRY principe --> */
@@ -114,41 +57,57 @@ li {
   align-items: center;
 }
 
-.search-form {
-  width: 400px;
-  padding: 20px 0 20px 0 ;
-  border: none; 
-  margin-top: 8px;
-  color: #e7e2e2;
-  display: flex; 
+#search-bar {
+  display: flex;
+  justify-content: flex-start;
   align-items: center;
-}
-
-.search-form__icon {
-  border: 1px solid transparent;
-  border-radius: 10px 0 0 10px;
+  width: 100%;
   height: 50px;
-  width: 60px;
-  background-color: #e7e2e2;
+  margin-bottom: 20px;
 }
 
-.search-form__input {
-  height:50px;
-  width: 250px;
-  padding-left: 10px;
+#search-input {
+  height: 50px;
+  max-width: 240px;
   font-weight: bold;
-  color: black;
-  border: 0.5px solid #f2f2f2;
+  font-size: 18px;
+  border-color: #f2f2f2;
+  border-top: transparent;
+  border-left: transparent;
+  border: 2px solid #f2f2f2;
+  font-family: "Raleway", sans-serif;
+  padding-left: 8px;
 }
 
-.search-form__btn {
-  border: 1px solid transparent; 
-  border-radius: 0 10px 10px 0;
+#map-icon {
+  display: flex;
+  align-items: center;
+  justify-items: center;
   height: 50px;
-  width: 150px;
-  font-weight:bold ;
+  max-width: 50px;
+  background-color: #f2f2f2;
+  border-radius: 10px 0 0 10px;
+  
+}
+
+#map-icon i {
+  padding-left: 20px;
+  padding-right: 20px;
+}
+
+#map-marker {
+  height: 50px;
+  max-width: 150px;
+  background-color: #0065fc;
+  border-style: none;
   color: white;
-  background-color:#0065FC;
+  border-radius: 0 10px 10px 0;
+  font-family: "Raleway", sans-serif;
+  font-weight: bold;
+}
+
+#search-icon {
+  display: none;
 }
 
 /* <--  Filtres --> */
@@ -161,12 +120,12 @@ li {
 }
  
 .filter-title {
-  margin-right: 20px;
-  margin-bottom: 20px;
+  margin-right: 5px;
+  margin-bottom: 5px;
 }
 
 .filter-btn {
-  margin-right: 20px;
+  margin-right: 10px;
 }
 
 .filter-icons {
@@ -185,13 +144,14 @@ li {
 
 .filter-text {
   height: 50px;
-  width: 280px;
+  width: 260px;
   border: 0.5px solid #f2f2f2;
   border-radius: 25px 25px 25px 25px;
   margin-left: 30px;
 } 
+
 .filter-text:hover{
-  background-color: #e7e2e2;
+  background-color: #DEEBFF;
 }
 
 .sub-info {
@@ -215,3 +175,71 @@ li {
   font-size: 16px;
   font-weight:bold;
 }
+
+/* <-- Responsive header for mediascreen < 576px --> */
+
+@media screen and (max-width: 576px) {
+  
+  /* <-- Responsive header mediascreen 576px --> */
+  /* <-- Resultat ok mais peut mieux faire --> */
+
+  .nav-logo {
+    margin-left: 110px;
+    width: 90px;
+    height: 45px;
+  }
+
+  .nav ul {
+    margin-left: -350px; 
+    margin-top: 90px;
+  } 
+
+  /* <---------------------------------------> */
+  
+  .nav li:hover {
+    border-bottom: 2px solid #0065FC;
+    border-top:none ;
+  }
+
+  .title {
+    font-size: 26px;
+    margin-left: 10px;
+  }
+  
+  .sub-title {
+    margin-left: 10px;
+    color: black !important;
+    font-weight:normal !important;
+  }
+
+  /* barre de recherche mediascreen 576px */
+
+  #search-bar {
+    margin-left: 10px;
+  }
+
+  #search-input {
+    max-width: 350px;
+  }
+
+  #map-marker {
+    width: 50px;
+    border-radius: 0 10px 10px 0;
+  }
+
+  #search-icon {
+    display: flex;
+    align-items: center;
+    justify-items: center;
+  }
+
+  #search-icon i {
+    margin: auto;
+  }
+
+  #search-text {
+    display: none;
+  }
+}
+
+
