--- a/css/hebergement.css
+++ b/css/hebergement.css
@@ -145,7 +145,7 @@
 }
 
 .pop-description {
-padding-top: 20px;
+  padding-top: 20px;
 }
 
 .pop-description p {
@@ -158,3 +158,14 @@ padding-top: 20px;
   font-size: 16px;
   font-weight: bold;
 } 
+
+@media screen and (max-width: 576px) {
+  #hebergement {
+    display: flex;
+    flex-direction: column;
+    margin: 0;
+  }
+  aside {
+    order: -1;
+  }
+}
