--- a/css/header.css
+++ b/css/header.css
@@ -6,17 +6,8 @@
   padding-top: 30px;
 }
 
-.nav-logo {
-  position: relative;
-  height: 20px;
-  align-items: baseline;
-  padding-bottom: 100px;
-}
-
 .nav ul {
   display: flex;
-  justify-content: space-between;
-  align-items: center;
 }
 
 a {
@@ -32,7 +23,6 @@ li {
   font-size: 17px;
   font-weight: bold;
   padding:  30px;
-  border-top: 4px solid transparent;
   width: 50%;
   margin-right: 20px;
 }
@@ -72,11 +62,18 @@ li {
   font-weight: bold;
   font-size: 18px;
   border-color: #f2f2f2;
-  border-top: transparent;
-  border-left: transparent;
   border: 2px solid #f2f2f2;
   font-family: "Raleway", sans-serif;
-  padding-left: 8px;
+  padding-left: 10px;
+}
+
+#search-text {
+  padding-left: 5px;
+  padding-right: 5px;
+}
+
+#search-icon {
+  display: none;
 }
 
 #map-icon {
@@ -104,10 +101,6 @@ li {
   border-radius: 0 10px 10px 0;
   font-family: "Raleway", sans-serif;
   font-weight: bold;
-}
-
-#search-icon {
-  display: none;
 }
 
 /* <--  Filtres --> */
@@ -164,7 +157,7 @@ li {
   color: #0065FC;
   width: 20px;
   height: 20px;
-  background-color: #f2f2f2;
+  background-color: white;
   position:absolute;
   border: 0.5px solid #f2f2f2;
 }
