--- a/css/header.css
+++ b/css/header.css
@@ -1,13 +1,24 @@
+
+.flex-center {
+  display: flex; 
+  justify-content: center;
+  align-items: center;
+}
+
 /*<-- header navbar-->*/
 
 .nav {
   display: flex;
   justify-content: space-between;
-  padding-top: 30px;
+  padding-top: -10px;
 }
 
 .nav ul {
   display: flex;
+}
+
+li {
+  list-style: none;
 }
 
 a {
@@ -15,16 +26,13 @@ a {
   color: #0065FC;
 }
 
-li {
-  list-style: none;
-}
-
 .nav li {
   font-size: 17px;
   font-weight: bold;
-  padding:  30px;
+  padding: 20px;
   width: 50%;
   margin-right: 20px;
+  border-top: 4px solid transparent;
 }
 
 .nav li:hover {
@@ -32,19 +40,14 @@ li {
 }
 
 /* <-- section Seach form --> */
+.title {
+  font-size: 20px;
+}
 
 .sub-title {
   font-weight: bold;
   color: #e7e2e2;
   margin-bottom: 20px;
-}
-
-/* <--  DRY principe --> */
-
-.flex-center {
-  display: flex; 
-  justify-content: center;
-  align-items: center;
 }
 
 #search-bar {
@@ -53,7 +56,7 @@ li {
   align-items: center;
   width: 100%;
   height: 50px;
-  margin-bottom: 20px;
+  margin-bottom: 0px;
 }
 
 #search-input {
@@ -65,6 +68,11 @@ li {
   border: 2px solid #f2f2f2;
   font-family: "Raleway", sans-serif;
   padding-left: 10px;
+}
+
+#search-input::placeholder {
+  /* color:black !important; */
+  color:red !important; 
 }
 
 #search-text {
@@ -83,7 +91,7 @@ li {
   height: 50px;
   max-width: 50px;
   background-color: #f2f2f2;
-  border-radius: 10px 0 0 10px;
+  border-radius: 15px 0 0 15px;
   
 }
 
@@ -98,7 +106,7 @@ li {
   background-color: #0065fc;
   border-style: none;
   color: white;
-  border-radius: 0 10px 10px 0;
+  border-radius: 0 15px 15px 0;
   font-family: "Raleway", sans-serif;
   font-weight: bold;
 }
@@ -106,7 +114,7 @@ li {
 /* <--  Filtres --> */
 
 .filter-cont {
-  margin-top: 5px;
+  margin-top: 10px;
   display:flex;
   align-items: center;
   flex-wrap: wrap;
@@ -115,6 +123,7 @@ li {
 .filter-title {
   margin-right: 5px;
   margin-bottom: 5px;
+  margin-left: 10px;
 }
 
 .filter-btn {
@@ -124,7 +133,7 @@ li {
 .filter-icons {
   border-radius: 50%;
   color: #0065FC;
-  width: 45px;
+  width: 50px;
   height: 50px;
   background-color: #DEEBFF;
   position:absolute;
@@ -137,11 +146,10 @@ li {
 
 .filter-text {
   height: 50px;
-  width: 260px;
   border: 0.5px solid #f2f2f2;
   border-radius: 25px 25px 25px 25px;
   margin-left: 30px;
-} 
+}
 
 .filter-text:hover{
   background-color: #DEEBFF;
@@ -160,6 +168,7 @@ li {
   background-color: white;
   position:absolute;
   border: 0.5px solid #f2f2f2;
+  font-weight:lighter;
 }
 
 .sub-info p {
@@ -175,27 +184,41 @@ li {
   
   /* <-- Responsive header mediascreen 576px --> */
   /* <-- Resultat ok mais peut mieux faire --> */
-
-  .nav-logo {
-    margin-left: 110px;
-    width: 90px;
-    height: 45px;
+  .container {
+    margin-left: 10px;
+    
+  }
+  .nav img {
+    margin-left: 150px;
+    width: 100px;
+    height: 50px;
+    margin-top: 25px;
   }
 
   .nav ul {
-    margin-left: -350px; 
-    margin-top: 90px;
+    margin-left: -360px; 
+    margin-top: 70px;
   } 
 
   /* <---------------------------------------> */
   
+  .nav li {
+    font-size: 17px;
+    font-weight: bold;
+    padding: 30px;
+    width: 50%;
+    margin-right: 20px;
+    border-bottom: 2px solid transparent;
+    border-top: none;
+  }
+
   .nav li:hover {
     border-bottom: 2px solid #0065FC;
-    border-top:none ;
+    border-top: none;
   }
 
   .title {
-    font-size: 26px;
+    font-size: 23px;
     margin-left: 10px;
   }
   
@@ -217,7 +240,8 @@ li {
 
   #map-marker {
     width: 50px;
-    border-radius: 0 10px 10px 0;
+    border-radius: 10px;
+    margin-left: -10px;
   }
 
   #search-icon {
