--- a/css/header.css
+++ b/css/header.css
@@ -16,7 +16,7 @@
 
 .nav-logo img {
   height: 50px;
-  width: 100px;
+  width: 80px;
   margin-top: 20px;
   margin-left: 20px;
 }
@@ -40,15 +40,15 @@ a {
 
 .nav li {
   font-size: 17px;
-  font-weight: bold;
   padding: 20px;
   width: 50%;
   margin-right: 20px;
-  border-top: 4px solid transparent;
+  padding-top: 40px;
+  border-top: 3px solid transparent;
 }
 
 .nav li:hover {
-  border-top: 4px solid #0065FC;
+  border-top: 3px solid #0065FC;
 }
 
 /* <-- section Seach form --> */
@@ -58,8 +58,8 @@ a {
 }
 
 .sub-title {
-  font-weight: bold;
-  color: #e7e2e2;
+  font-weight: 400;
+  color: #000;
   margin-bottom: 20px;
 }
 
@@ -88,8 +88,8 @@ a {
 }
 
 #search-text {
-  padding-left: 5px;
-  padding-right: 5px;
+  padding-left: 10px;
+  padding-right: 10px;
 }
 
 #search-icon {
@@ -109,6 +109,7 @@ a {
 #map-icon i {
   padding-left: 20px;
   padding-right: 20px;
+  font-size:larger;
 }
 
 #map-marker {
@@ -136,7 +137,7 @@ a {
 
 .filter-title {
   margin-right: 20px;
-  margin-top: -12px;
+  margin-top: -18px;
 }
   
 .filter a {
@@ -150,16 +151,16 @@ a {
 }
 
 .filter {
-  margin-right: 8px;
-  padding: 12px 22px 10px 0;
-  border: 3px solid #f2f2f2;
+  margin-right: 20px;
+  padding: 14px 40px 10px 0;
+  border: 2px solid #f2f2f2;
   border-radius: 30px 30px 30px 30px;
   margin-bottom: 15px;
 }
 
 .filter:hover {
   background-color: #deebff;
-   border: 3px solid #deebff;
+  border: 2px solid #deebff;
 }
 
 .filter-icon {
@@ -171,7 +172,7 @@ a {
 }
 
 .filter-icon i {
-  margin-left: 6px;
+  margin-left: 8px;
 
 }
   
@@ -184,6 +185,10 @@ a {
   margin-bottom: 30px;
 }
 
+.filter-icons-small i {
+  font-size: small;
+}
+
 .filter-icons-small {
   border-radius: 50%;
   color: #0065FC;
@@ -192,14 +197,13 @@ a {
   background-color: white;
   position:absolute;
   border: 0.5px solid #f2f2f2;
-  font-weight:lighter;
+  margin-top: -2px;
 }
 
 .sub-info p {
   margin-left: 30px;
-  color:#e7e2e2;
+  color:#000;
   font-size: 16px;
-  font-weight:bold;
 }
 
 /* <-- Responsive header for mediascreen < 576px --> */
