--- a/css/hebergement.css
+++ b/css/hebergement.css
@@ -34,12 +34,14 @@
 .heb-link {
   font-weight: bold;
   font-size: 20px ;
-  margin-top: 15px;
+  margin-top: 10px;
+  margin-bottom:10px;
   width: 200px;
   background-color: #f2f2f2;
-  padding-left: 20px;
+  padding-left: 40px;
   border: none;
   width: 100%;
+  border-radius: 0 0 20px 20px;
 }
 
 .heb-card {
@@ -103,8 +105,9 @@
   background-color: white;
   border-radius: 20px;
   margin: 20px 20px 20px 20px;
-  border: 5px solid white;
+  border: 4px solid white;
   margin-bottom: -10px;
+  padding-left: 5px;
 }
 
 .pop-div:nth-child(1) {
@@ -118,7 +121,7 @@
   font-size: 22px ;
   margin-top: 25px;
   margin-bottom: 16px !important;
-margin-left: 0;
+  margin-left: 0;
 }
 
 .pop-title i{
@@ -135,7 +138,6 @@ margin-left: 0;
   object-fit: cover;
   object-position: center;
   float: left;
-  margin-right: 15px;
 }
 
 .pop-description {
@@ -143,6 +145,7 @@ margin-left: 0;
 }
 
 .pop-description p {
+  margin-left: 15px;
   font-size: 12px;
   margin-top: 8px;
   margin-bottom: 40px;
@@ -154,7 +157,7 @@ margin-left: 0;
 } 
 
 @media screen and (max-width: 576px) {
-.container
+
   #hebergement {
     display: flex;
     flex-direction: column;
