--- a/css/activity.css
+++ b/css/activity.css
@@ -13,6 +13,7 @@
   height: 450px;
   width: 96%;
   margin: 0;
+  padding-bottom: 20px;
   /* background-color: red; */
 }
 
@@ -25,30 +26,27 @@
   border-radius: 20px 20px 0 0;
   justify-content: center;
   width: 100%;
-  height: 80%;
+  height: 85%;
   object-fit: cover;
   object-position: center;
-  filter: brightness(1.05);
   display: flex;
 }
 
 .act-subtitle  {
   color: black;
-  margin-top: 10px; 
+  margin-top: 15px; 
   margin-left: 15px;
   display: flex; 
   justify-content: start;
   align-items: center;
-  /* background-color: blue; */
-  /* height: 40px; */
-  font-size: small;
+  font-size: 14px;
 }
 
 .act-div {
   border-radius: 20px;
   box-sizing: content-box;
   box-shadow: 0 0 16px #f2f2f2;
-  height: 95%;
+  height: 100%;
   width: 23%;
   margin-right: auto;
   margin-left: auto;
@@ -56,22 +54,25 @@
 }
 
 .act-div:nth-child(2) {
-  height: 200px;
-  /* margin-bottom: 5px; */
+  height: 170px;
+  padding-bottom: 35px;
 }
 
 .act-div:nth-child(3) {
-  height: 140px;
-  margin-top: 80px;
-  
+  height: 110px;
+  margin-top: 75px;
+  padding-bottom: 35px;
 }
 
 .act-div:nth-child(5) {
-  height: 200px;
+  height: 150px;
+  padding-bottom: 35px;
 }
 
 .act-div:nth-child(6) {
-  height: 200px;
+  height: 150px;
+  margin-top: 56px;
+  padding-bottom: 35px;
 }
 
 /* activités mediascreen 576px @media screen and (max-width: 576px*/
@@ -87,9 +88,18 @@
   
   .act-div {
     width: 90%;
-    height: 200px;
+    height: 160px !important;
     margin: auto;
     margin-bottom: 20px;
+    padding-bottom: 25px !important;
+  }
+  
+  .act-div:nth-child(3){
+    margin-top: 0;
+  }
+
+  .act-div:nth-child(6) {
+    margin-top: 0;
   }
   
   .act-title {
