--- a/css/footer.css
+++ b/css/footer.css
@@ -14,7 +14,7 @@
   line-height: 32px;
 }
 
-.mentions h3 {
+.footer-title {
   margin-bottom: 10px;
 }
 
@@ -28,7 +28,6 @@
 
   .mentions {
     width: 80%;
-
   }
 
   
