--- a/css/hebergement.css
+++ b/css/hebergement.css
@@ -33,7 +33,7 @@
 
 .heb-link {
   font-weight: bold;
-  font-size: 20px ;
+  font-size: 18px ;
   margin-top: 10px;
   margin-bottom:10px;
   width: 200px;
@@ -107,7 +107,6 @@
   margin: 20px 20px 20px 20px;
   border: 4px solid white;
   margin-bottom: -10px;
-  padding-left: 5px;
 }
 
 .pop-div:nth-child(1) {
@@ -133,11 +132,12 @@
 .pop-img img {
   border-radius: 20px 0 0 20px ;
   justify-content: flex-start;
-  width: 40%;
+  width: 42%;
   height: 150px;
   object-fit: cover;
   object-position: center;
   float: left;
+  padding-right: 18px;
 }
 
 .pop-description {
@@ -175,7 +175,7 @@
   .heb-card {
     width: 90%;
     border: 4px solid white;
-    margin-top: 20px;
+    margin-top: 5px;
   }
   
   .heb-card img {
@@ -188,16 +188,19 @@
   
   .heb-link {
     background-color: white;
+    padding-left:0;
+    
   }
 
   aside {
     order: -1;
   }
 
+  
   .pop-container {
     width: 100%;
     border-radius: 0;
-    margin: 0;  
+    margin-left: 0 !important;  
   }
   
   .pop-div {
