--- a/css/activity.css
+++ b/css/activity.css
@@ -1,6 +1,6 @@
 /* section activité */
 .act-title {
-  margin-top: 30px;
+  margin-top: 50px;
   margin-left: 10px;
   margin-bottom: 20px;
 }
@@ -53,7 +53,7 @@
   margin-top: 20px;
 }
 
-.act-div:nth-child(2) {
+/* .act-div:nth-child(2) {
   height: 170px;
   padding-bottom: 35px;
 }
@@ -73,7 +73,7 @@
   height: 150px;
   margin-top: 56px;
   padding-bottom: 35px;
-}
+} */
 
 /* activités mediascreen 576px @media screen and (max-width: 576px*/
 @media screen and (max-width: 576px) {
