--- a/css/footer.css
+++ b/css/footer.css
@@ -1,12 +1,11 @@
-.ment-container {
+.container-footer {
   display: flex;
   flex-direction:row;
-  justify-content:space-around;
-  align-items: center;
+  justify-content: center;
+  align-items: flex-start;
   background-color: #f2f2f2;
-  margin-top:30px;
-  padding-bottom: 25px;
-  height: max-content;
+  padding: 50px 0 50px 0px;
+  margin: auto;
 }
 
 .mentions {
@@ -14,16 +13,19 @@
   line-height: 32px;
 }
 
-.footer-title {
-  margin-bottom: 10px;
+.footer-title h3 {
+  margin-bottom: 15px;
 }
 
 @media screen and (max-width: 576px) {
 
-  .ment-container {
+  .container-footer{
     display: flex;
     flex-direction: column;
+    justify-content: space-around;
     height: 500px;
+    padding-left: 15px;
+    margin: 0;
   }
 
   .mentions {
