--- a/css/activity.css
+++ b/css/activity.css
@@ -43,10 +43,10 @@
 }
 
 .activity-list .column picture h3 {
-  padding: 8px;
-  margin-top: 8px;
   font-size: 16px;
-  margin-left: 8px;
+  padding: 8px;
+  margin-top: 10px;
+  margin-left: 12px;
 }
 
 .activity-list .column.double picture {
@@ -80,7 +80,8 @@
     width: 96%;
   }
   
-  #medium-picture {
+  #medium-picture,
+  #small-picture {
     height: 200px;
     width: 96%;
     margin-bottom: 25px;
