--- a/css/footer.css
+++ b/css/footer.css
@@ -1,21 +1,22 @@
 .container-footer {
   display: flex;
   flex-direction:row;
-  justify-content: center;
-  align-items: flex-start;
+  /* justify-content:space-around; */
   background-color: #f2f2f2;
-  padding: 50px 0 50px 0px;
+  padding: 50px 0 50px 70px;
   margin: auto;
 }
 
 .mentions {
-  width: 30%;
-  line-height: 32px;
+  width: 33%;
+  line-height: 30px;
+  padding-left: 20px;
+  list-style: none;
 }
 
-.footer-title h3 {
-  margin-bottom: 15px;
-}
+ .mentions h3{
+    padding-bottom: 10px
+  }
 
 @media screen and (max-width: 576px) {
 
@@ -23,15 +24,16 @@
     display: flex;
     flex-direction: column;
     justify-content: space-around;
-    height: 500px;
-    padding-left: 15px;
     margin: 0;
+    height: 485px;
+    padding: 15px 0 0 15px;
   }
 
   .mentions {
     width: 80%;
   }
-
+  
+ 
   
 }
 
