--- a/css/header.css
+++ b/css/header.css
@@ -153,7 +153,7 @@ a {
 .filter {
   margin-right: 20px;
   padding: 14px 8px 10px 0;
-  border: 2px solid #f2f2f2;
+  border: 3px solid #f2f2f2;
   border-radius: 30px 30px 30px 30px;
   margin-bottom: 15px;
 }
@@ -178,9 +178,8 @@ a {
   
 .filter-btn {
   font-weight: bold;
-  margin-right: 30px;
-  margin-left: 15px;
-  background-color: red;
+  margin:0 30px 0 15px;
+  /* margin-left: 15px; */
 }
 
 .sub-info {
@@ -235,24 +234,24 @@ a {
   
   .nav li {
     font-size: 17px;
-    padding: 30px;
     width: 50%;
     margin-right: 5px;
-    border-bottom: 4px solid transparent;
+    border-bottom: 3px solid transparent;
     border-top: none;
+    padding: 30px;
     padding-bottom: 10px;
     text-align: center;
   }
 
   .nav li:hover {
-    border-bottom: 4px solid #0065FC;
+    border-bottom: 3px solid #0065FC;
     border-top: none;
   }
 
   .title {
     font-size: 23px;
     margin-left: 10px;
-    padding-top: 15px;
+    /* padding-top: 15px; */
   }
   
   .sub-title {
