--- a/css/header.css
+++ b/css/header.css
@@ -227,10 +227,6 @@ a {
     display: block;
    
   }
-
-  /* .nav ul {
-    
-  } */
   
   .nav li {
     font-size: 17px;
@@ -251,7 +247,6 @@ a {
   .title {
     font-size: 23px;
     margin-left: 10px;
-    /* padding-top: 15px; */
   }
   
   .sub-title {
@@ -310,7 +305,8 @@ a {
     font-size: 16px;
     font-weight:lighter;
   }
-
+  
+  /* <-- Responsive header for mediascreen < 576px --> */
 }
 
 
