--- a/css/activity.css
+++ b/css/activity.css
@@ -1,3 +1,5 @@
+ /* css valid */
+
 #activity {
   margin-bottom: 20px;
 }
@@ -39,6 +41,8 @@
   height: 100%;
   box-shadow: 0px 0px 10px 0px #E0E0E0;
   border-radius: 25px;
+  text-decoration: none;
+  color: #000;
 }
 
 .activity-list .column a h3 {
