--- a/css/hebergement.css
+++ b/css/hebergement.css
@@ -1,4 +1,5 @@
- 
+ /* css valid */
+
 /* <-- Section hebergement --> */
 
 #hebergement {
@@ -158,11 +159,11 @@
   font-weight: bold;
 } 
 
+/* @media screen and (max-width: 768px) {
+
+} */
+
 @media screen and (max-width: 768px) {
-
-}
-
-@media screen and (max-width: 576px) {
 
   #hebergement {
     display: flex;
