--- a/css/footer.css
+++ b/css/footer.css
@@ -7,6 +7,7 @@
   background-color: #F2F2F2;
   padding: 50px 0 50px 70px;
   margin: auto;
+  max-width: 100%;
 }
 
 .mentions {
@@ -20,14 +21,30 @@
     padding-bottom: 10px
   }
 
+@media screen and (max-width: 768px) {
+
+  .container-footer{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    margin: 0;
+    height: 420px;
+    padding: 15px 0 20px 15px;
+  }
+
+  .mentions {
+    width: 100%;
+  }
+}
+
 @media screen and (max-width: 576px) {
 
   .container-footer{
     display: flex;
     flex-direction: column;
     margin: 0;
-    height: 485px;
-    padding: 15px 0 0 15px;
+    height: 420px;
+    padding:35px 0 20px 15px;
   }
 
   .mentions {
