--- a/css/footer.css
+++ b/css/footer.css
@@ -1,4 +1,4 @@
- /* css valid */
+ /* css valid W3C*/
 
 .container-footer {
   display: flex;
@@ -17,25 +17,25 @@
   list-style: none;
 }
 
- .mentions li h3{
-    padding-bottom: 10px
-  }
+.mentions li h3 {
+  padding-bottom: 10px
+}
+
+/* <-- Responsive header mediascreen 768px --> */
 
 @media screen and (max-width: 768px) {
 
   .container-footer{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    margin: 0;
-    height: 420px;
     padding: 15px 0 20px 15px;
+    max-width: 100%;
   }
 
   .mentions {
     width: 100%;
   }
 }
+
+/* <-- Responsive header mediascreen 576px --> */
 
 @media screen and (max-width: 576px) {
 
