--- a/css/footer.css
+++ b/css/footer.css
@@ -21,6 +21,11 @@
   padding-bottom: 10px
 }
 
+.mentions li a {
+  text-decoration: none;
+  color: #000;
+}
+
 /* <-- Responsive header mediascreen 768px --> */
 
 @media screen and (max-width: 768px) {
