--- a/css/header.css
+++ b/css/header.css
@@ -12,7 +12,6 @@
 .nav {
   display: flex;
   justify-content: space-between;
-  padding-top: -10px;
 }
 
 .nav-logo img {
@@ -50,10 +49,12 @@ li {
   margin-right: 20px;
   padding-top: 40px;
   border-top: 3px solid transparent;
+
 }
 
-.nav li:hover {
+.nav li a.active {
   border-top: 3px solid #0065FC;
+  padding-top: 40px;
 }
 
 /* <-- section Seach form --> */
@@ -159,7 +160,9 @@ li {
   margin-right: 6px;
   padding: 14px 8px 10px 0;
   border: 3px solid #f2f2f2;
-  border-radius: 30px 30px 30px 30px;
+  border-radius: 30px;
+  position: relative;
+  /* padding-left: 36px; */
   margin-bottom: 15px;
 }
 
@@ -171,14 +174,13 @@ li {
 .filter-icon {
   background-color: #deebff;
   border-radius: 50%;
-  padding: 15px 15px 12px 7px;
+  padding: 15px 15px 12px 5px;
   color: #0065fc;
   margin-right: 5px;
 }
 
 .filter-icon i {
   margin-left: 8px;
-
 }
   
 .filter-btn {
@@ -214,7 +216,7 @@ li {
 
 /* <-- Responsive header for mediascreen < 992px --> */
 
-@media screen and (max-width: 991px) {
+@media screen and (max-width: 992px) {
 
   .filter-title {
     width: 100%;
@@ -223,16 +225,16 @@ li {
 
 }
 
-/* <-- Responsive header mediascreen 576px --> */
+/* <-- Responsive header mediascreen 768px --> */
 
-@media screen and (max-width: 576px) {
+@media screen and (max-width: 768px) {
   
-  /* <-- Responsive navbar mediascreen 576px --> */
+  /* <-- Responsive navbar mediascreen 768px --> */
   
   .nav {
     flex-direction: column;
     margin-left:  -20px;
-    width: calc(100vw + 20px);
+    width: calc(100% + 20px);
   }
 
   .nav-logo img {
@@ -247,16 +249,19 @@ li {
     font-size: 17px;
     width: 50%;
     margin-right: 5px;
-    border-bottom: 3px solid transparent;
+    border-bottom: 3px solid #f2f2f2;
     border-top: none;
     padding: 30px;
     padding-bottom: 10px;
     text-align: center;
   }
+  
+  .nav li .active {
+    border-top: none;
+  }
 
   .nav li:hover {
     border-bottom: 3px solid #0065FC;
-    border-top: none;
   }
 
   .title {
@@ -270,7 +275,7 @@ li {
     font-weight:normal;
   }
 
-  /* barre de recherche mediascreen 576px */
+  /* barre de recherche mediascreen 768px */
 
   #search-bar {
     margin-left: 12px;
@@ -298,7 +303,7 @@ li {
     display: none;
   }
 
-  /* filtres mediascreen 576px */
+  /* filtres mediascreen 768px */
   
   .filter-btn {
     margin-left: 0;
