--- a/css/hebergement.css
+++ b/css/hebergement.css
@@ -168,7 +168,7 @@
 
   .heb-container {
     background-color: white;
-    width: 105%;
+    width: calc(100% + 20px);
     display: flex;
     flex-direction:column ;
     border-radius:0 ;
@@ -202,7 +202,7 @@
   }
 
   .pop-container {
-    width: 113%;
+    width: calc(100% + 40px);
     border-radius: 0;
     margin-left: -20px;  
     padding-bottom: 15px;
